# faster-rust-targets

./: Cargo.toml
bytes/fuzz/: Cargo.toml
bytes/fuzz/fuzz_targets/: bytes_ops.rs
faster-rust-target-regex/regex-automata/fuzz/: Cargo.toml
faster-rust-target-regex/regex-automata/fuzz/fuzz_targets/: fuzz_target_1.rs
regex-automata/: Cargo.toml
regex-automata/fuzz/fuzz_targets/: fuzz_target_1.rs
